# DDRelocator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ddrelocator/: __init__.py  ddrelocator.py  headers.py  helpers.py  locator.py  plotting.py
examples/ex1/: README.md  check_misfit.py  check_solution.py  prepare_obs.py  run_ddrelocator.py
examples/ex2/: README.md  catalog.csv  check_obs.py  check_solution.py  fdsn_get_waveforms.py  get_available_stations.py  prepare_obs.py  process_data.py  run_ddrelocator.py
