[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ddrelocator"
description = "A Python package to determine relative location of two nearby earthquakes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [{name = "Dongdong Tian", email = "dtian@cug.edu.cn"}]
dependencies = [
	"matplotlib",
	"numpy",
	"obspy",
	"pandas",
]
dynamic = ["version"]

[tool.setuptools]
platforms = ["Any"]

[tool.setuptools_scm]
local_scheme = "node-and-date"
fallback_version = "999.999.999+unknown"

[tool.isort]
profile = "black"
skip_gitignore = true
known_third_party = "ddrelocator"
