[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ddrelocator"
description = "A Python package to determine relative location of two nearby earthquakes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [{name = "Dongdong Tian", email = "dtian@cug.edu.cn"}]
dependencies = [
	"matplotlib",
	"numpy",
	"obspy",
	"pandas",
]
dynamic = ["version"]

[tool.setuptools]
platforms = ["Any"]

[tool.setuptools_scm]
local_scheme = "node-and-date"
fallback_version = "999.999.999+unknown"

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore `F401` (unused-import) in all `__init__.py` files

[tool.ruff.isort]
known-third-party = ["ddrelocator"]
